# itrx

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENCE.md  README.md  pyproject.toml  relnotes.md
.github/workflows/: lint-test.yml  package.yml  publish.yml
doc/: apidoc.md  examples.ipynb
src/itrx/: __init__.py  itr.py
src/scripts/: introspect.py
src/test/: test_aggregation.py  test_collection.py  test_combine_split.py  test_general.py  test_itr.py  test_transform_filter.py
