[project]
name = "itrx"
version = "0.1.5"
description = "A chainable iterator adapter"
readme = "README.md"
authors = [
    { name = "virgesmith", email = "andrew@friarswood.net" }
]
license-files = ["LICENCE.md"]
requires-python = ">=3.12"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/virgesmith/itrx"
"Bug Tracker" = "https://github.com/virgesmith/itrx/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.2",
]

[project.scripts]
apidoc = "scripts.introspect:main"

[tool.pytest.ini_options]
testpaths = [
  "."
]
addopts = "--cov=src/itrx --cov-report html --cov-fail-under=100 --doctest-modules --doctest-glob=README.md"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["B", "C", "D103", "E", "F", "I", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/test/*.py" = ["D103"]

[tool.mypy]
strict = true
disallow_untyped_defs = true
